--- a/about.html
+++ b/about.html
@@ -149,8 +149,7 @@
 
     <!-- CORPORATE PROFILE SECTION -->
 
-    <section class="corporate-profile about-card-content px-2 px-md-5">
-        <!-- <section class="corporate-profile px-2 px-md-5"> -->
+    <!-- <section class="corporate-profile about-card-content px-2 px-md-5">
         <div class="container">
             <div class="text-center pt-5">
                 <h2>Corporate Profile</h2>
@@ -158,15 +157,12 @@
                     at.</p>
             </div>
         </div>
-
         <div class="row align-items-center">
-
             <div class="col-md-4 order-md-2">
                 <img src="assets/images/about-page/corporate-section-img/corporate-section-img.webp"
                     alt="Corporate Image" class="img-fluid img-fluid-corporate bottom-0-right-0 banner-animation"
                     loading="lazy">
             </div>
-
             <div class="col-md-8 order-md-1">
                 <p class="text-justify regular-font">
                     Bhagirath Industries Private Limited, founded in 2019 and headquartered in Ahmedabad Gujarat
@@ -187,10 +183,8 @@
                     merchandising to manufacturing of a wide range of agricultural products.
                 </p>
             </div>
-
         </div>
-        <!-- </div> -->
-    </section>
+    </section> -->
 
     <!-- ABOUT PAGE TAB SECTION -->
 
@@ -392,7 +386,7 @@
 
     <!-- PARTNERS & GROWING RESPONSIBILITY SECTION -->
 
-    <section class="partners-growing-responsibility">
+    <!-- <section class="partners-growing-responsibility">
         <div class="container pt-5 pb-5">
             <div class="row">
                 <div class="col-md-8">
@@ -445,14 +439,15 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- CORPORATE ORGANOGRAM -->
 
-    <!-- <section class="corporate-organogram py-5">
+    <section class="corporate-organogram py-5">
         <div class="container text-light py-5">
             <h2>Corporate Organogram</h2>
-            <p class="heavy-font regular-font">Lorem ipsum dolor sit amet consectetur. Donec quis vitae condimentum fringilla
+            <p class="heavy-font regular-font">Lorem ipsum dolor sit amet consectetur. Donec quis vitae condimentum
+                fringilla
                 eleifend eu cras et
                 amet. Eu non mi accumsan lacus enim. Nullam nam odio gravida nulla turpis tempor sit tristique. Eget
                 luctus neque sapien accumsan dui ac mauris lobortis elit. Lorem ipsum dolor sit amet consectetur.
@@ -471,11 +466,221 @@
                 </button>
             </div>
         </div>
-    </section> -->
+    </section>
+
+    <!-- OUR TEAM -->
+
+    <section class="our-team pt-5">
+        <div class="container">
+            <div class="our-team-content text-center">
+                <h2>Our Team</h2>
+                <p class="text-center regular-font">Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt
+                    at. </p>
+            </div>
+            <!-- SWIPER -->
+            <div class="swiper mySwiper-2 pb-5">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="our-team-card">
+                            <img src="./assets/images/our-company-page/our team/our-team-img-1.png" alt="Employee Image"
+                                class="our-team-image">
+                            <div class="our-team-overlay">
+                                <div class="our-team-info">
+                                    <h3 class="our-team-name">John Doe</h3>
+                                    <p class="our-team-designation"><strong>Chief Executive Officer</strong></p>
+                                    <div class="our-team-social-icons">
+                                        <a href="#" class="our-team-icon"><i class="bi bi-facebook"></i></a>
+                                        <a href="#" class="our-team-icon"><i class="bi bi-twitter-x"></i></a>
+                                        <a href="#" class="our-team-icon"><i class="bi bi-instagram"></i></a>
+                                        <a href="#" class="our-team-icon"><i class="bi bi-linkedin"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="our-team-card">
+                            <img src="./assets/images/our-company-page/our team/our-team-img-3.png" alt="Employee Image"
+                                class="our-team-image">
+                            <div class="our-team-overlay">
+                                <div class="our-team-info">
+                                    <h3 class="our-team-name">Emily Carter</h3>
+                                    <p class="our-team-designation"><strong>Senior Marketing Manager</strong></p>
+                                    <div class="our-team-social-icons">
+                                        <a href="#" class="our-team-icon"><i class="bi bi-facebook"></i></a>
+                                        <a href="#" class="our-team-icon"><i class="bi bi-twitter-x"></i></a>
+                                        <a href="#" class="our-team-icon"><i class="bi bi-instagram"></i></a>
+                                        <a href="#" class="our-team-icon"><i class="bi bi-linkedin"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="our-team-card">
+                            <img src="./assets/images/our-company-page/our team/our-team-img-2.png" alt="Employee Image"
+                                class="our-team-image">
+                            <div class="our-team-overlay">
+                                <div class="our-team-info">
+                                    <h3 class="our-team-name">James Roberts</h3>
+                                    <p class="our-team-designation"><strong>Lead Software Engineer</strong></p>
+                                    <div class="our-team-social-icons">
+                                        <a href="#" class="our-team-icon"><i class="bi bi-facebook"></i></a>
+                                        <a href="#" class="our-team-icon"><i class="bi bi-twitter-x"></i></a>
+                                        <a href="#" class="our-team-icon"><i class="bi bi-instagram"></i></a>
+                                        <a href="#" class="our-team-icon"><i class="bi bi-linkedin"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="our-team-card">
+                            <img src="./assets/images/our-company-page/our team/our-team-img-4.png" alt="Employee Image"
+                                class="our-team-image">
+                            <div class="our-team-overlay">
+                                <div class="our-team-info">
+                                    <h3 class="our-team-name">Sophia Martinez</h3>
+                                    <p class="our-team-designation"><strong>Product Design Engineer</strong></p>
+                                    <div class="our-team-social-icons">
+                                        <a href="#" class="our-team-icon"><i class="bi bi-facebook"></i></a>
+                                        <a href="#" class="our-team-icon"><i class="bi bi-twitter-x"></i></a>
+                                        <a href="#" class="our-team-icon"><i class="bi bi-instagram"></i></a>
+                                        <a href="#" class="our-team-icon"><i class="bi bi-linkedin"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="our-team-card">
+                            <img src="./assets/images/our-company-page/our team/our-team-img-2.png" alt="Employee Image"
+                                class="our-team-image">
+                            <div class="our-team-overlay">
+                                <div class="our-team-info">
+                                    <h3 class="our-team-name">Liam Johnson</h3>
+                                    <p class="our-team-designation"><strong>Chief Financial Officer</strong></p>
+                                    <div class="our-team-social-icons">
+                                        <a href="#" class="our-team-icon"><i class="bi bi-facebook"></i></a>
+                                        <a href="#" class="our-team-icon"><i class="bi bi-twitter-x"></i></a>
+                                        <a href="#" class="our-team-icon"><i class="bi bi-instagram"></i></a>
+                                        <a href="#" class="our-team-icon"><i class="bi bi-linkedin"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="our-team-card">
+                            <img src="./assets/images/our-company-page/our team/our-team-img-3.png" alt="Employee Image"
+                                class="our-team-image">
+                            <div class="our-team-overlay">
+                                <div class="our-team-info">
+                                    <h3 class="our-team-name">Olivia Brown</h3>
+                                    <p class="our-team-designation"><strong>Operations Coordinator</strong></p>
+                                    <div class="our-team-social-icons">
+                                        <a href="#" class="our-team-icon"><i class="bi bi-facebook"></i></a>
+                                        <a href="#" class="our-team-icon"><i class="bi bi-twitter-x"></i></a>
+                                        <a href="#" class="our-team-icon"><i class="bi bi-instagram"></i></a>
+                                        <a href="#" class="our-team-icon"><i class="bi bi-linkedin"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-scrollbar"></div>
+                <!-- <div class="swiper-button-next"></div> -->
+                <!-- <div class="swiper-button-prev"></div> -->
+            </div>
+        </div>
+    </section>
+
+    <!-- CLIENT'S SUCCESS STORIES (NEW) -->
+
+    <section class="client-success-stories">
+        <div class="container">
+            <div class="client-top-text">
+                <h2>CLIENT'S SUCCESS STORIES</h2>
+                <p class="regular-font">Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at.</p>
+            </div>
+            <div class="row">
+                <div class="col-md-5">
+                    <div class="client-img">
+                        <img src="assets/images/our-services-icon-img/client-success-stories/client-img-1.webp"
+                            class="img-fluid pb-2 pb-md-5 new-client-img" alt="client image">
+                    </div>
+                </div>
+                <div class="col-md-7">
+                    <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000"
+                        data-bs-pause="false">
+                        <div class="carousel-inner">
+                            <div class="carousel-item pt-2 active">
+                                <div class="container">
+                                    <div class="row align-items-center">
+                                        <div class="client-success-stories-text">
+                                            <h2 class="pt-5 px-md-5">Simran Kaur</h2>
+                                            <p class="c-s-p-text px-md-5">HR & manager</p>
+                                            <p class="regular-font px-md-5">Bhagirath BVM Grand (HK) exceeds
+                                                expectations in trading goods.
+                                                Their professionalism and dedication ensure seamless transactions and
+                                                superior product quality.
+                                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat,
+                                                repellat.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item pt-2">
+                                <div class="container">
+                                    <div class="row align-items-center">
+                                        <div class="client-success-stories-text">
+                                            <h2 class="pt-5 px-md-5">John Doe</h2>
+                                            <p class="c-s-p-text px-md-5">HR & manager</p>
+                                            <p class="regular-font px-md-5">Bhagirath BVM Grand (HK) exceeds
+                                                expectations in trading goods.
+                                                Their professionalism and dedication ensure seamless transactions and
+                                                superior product quality.
+                                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat,
+                                                repellat.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item pt-2">
+                                <div class="container">
+                                    <div class="row align-items-center">
+                                        <div class="client-success-stories-text">
+                                            <h2 class="pt-5 px-md-5">Donald Hill</h2>
+                                            <p class="c-s-p-text px-md-5">HR & manager</p>
+                                            <p class="regular-font px-md-5">Bhagirath BVM Grand (HK) exceeds
+                                                expectations in trading goods.
+                                                Their professionalism and dedication ensure seamless transactions and
+                                                superior product quality.
+                                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat,
+                                                repellat.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide-to="0"
+                                class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide-to="1"
+                                aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide-to="2"
+                                aria-label="Slide 3"></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- FAQ SECTION -->
 
-    <section class="faq pb-5">
+    <section class="faq pt-5 pb-5">
         <div class="container">
             <div class="text-center">
                 <H2>FREQUENTLY ASKED QUESTIONS</H2>
@@ -730,7 +935,7 @@
             });
         });
 
-        //Swiper script
+        //Swiper Script (Strategic Framework)
         var swiper = new Swiper(".mySwiper", {
             // autoHeight: true,
             slidesPerView: 1,
@@ -743,13 +948,47 @@
                 el: ".swiper-pagination",
                 clickable: true,
             },
-            // breakpoints: {
-            //     768: {
-            //         slidesPerView: 2,
-            //         spaceBetween: 20,
-            //     },
-            // },
         });
+
+        //Swiper Script (OUR TEAM)
+        var swiper = new Swiper(".mySwiper-2", {
+            slidesPerView: 1,
+            spaceBetween: 10,
+            autoplay: {
+                delay: 2500,
+                disableOnInteraction: false,
+            },
+            scrollbar: {
+                el: ".swiper-scrollbar",
+                hide: false,
+            },
+            breakpoints: {
+                768: {
+                    slidesPerView: 2,
+                    spaceBetween: 20,
+                },
+                992: {
+                    slidesPerView: 3,
+                    spaceBetween: 30,
+                },
+            },
+        });
+
+        // Client's Success Stories - Image Change
+        const images = [
+            'assets/images/our-services-icon-img/client-success-stories/client-img-1.webp',
+            'assets/images/our-services-icon-img/client-success-stories/client-img-2.webp',
+            'assets/images/our-services-icon-img/client-success-stories/client-img-3.webp'
+        ];
+        const carouselElement = document.getElementById('testimonialCarousel');
+        const imgElement = document.querySelector('.new-client-img');
+
+        carouselElement.addEventListener('slide.bs.carousel', function (event) {
+            const newIndex = event.to; // Get the index of the new slide
+            imgElement.src = images[newIndex]; // Update the image source
+        });
+
+
     </script>
 
 </body>
