--- a/our-services.html
+++ b/our-services.html
@@ -182,9 +182,9 @@
 
   <!-- MIDDLE CARDS (OLD) -->
 
-  <section class="job-card">
-    <!-- <h2 class="text-center">OUR SERVICES</h2> -->
-    <!-- <p class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam, vero.</p> -->
+  <!-- <section class="job-card">
+    <h2 class="text-center">OUR SERVICES</h2>
+    <p class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam, vero.</p>
     <div id="card-area">
       <div class="wrapper">
         <div class="box-area">
@@ -251,11 +251,107 @@
         </div>
       </div>
     </div>
+  </section> -->
+
+  <!-- OUR SERVICES NEW CARDS -->
+  <section class="container text-center my-5 job-card">
+    <h2 class="new-our-services-cards-heading">Our Services</h2>
+    <p class="new-our-services-cards-text text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, eos.
+    </p>
+
+    <div class="row new-our-services-cards-container">
+      <!-- Card 1 -->
+      <div class="col-lg-4 col-md-6 new-our-services-cards-card">
+        <div class="new-our-services-cards-image-container">
+          <div class="new-our-services-cards-image"
+            style="background-image: url('assets/images/our-services-icon-img/cards/Rectangle 18 (1) (1).webp');">
+            <div class="new-our-services-cards-overlay">
+              <p class="new-our-services-cards-overlay-text pt-2"><span class="regular-font">Storage</span><br>Your raw
+                food materials are precious cargo to us. We handle and transport them with the utmost care,
+                utilising industry-best practices and compliance standards. Trust us to safeguard the quality and
+                integrity of your goods throughout their journey.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Card 2 -->
+      <div class="col-lg-4 col-md-6 new-our-services-cards-card">
+        <div class="new-our-services-cards-image-container">
+          <div class="new-our-services-cards-image"
+            style="background-image: url('assets/images/our-services-icon-img/cards/Rectangle 18 (2).webp');">
+            <div class="new-our-services-cards-overlay">
+              <p class="new-our-services-cards-overlay-text pt-2"><span class="regular-font">Logistic</span><br>Our
+                seamless logistics network spans the globe, connecting suppliers to customers with precision. We
+                optimise routes, manage inventory, and streamline processes to ensure timely and cost-effective delivery
+                of raw food materials.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Card 3 -->
+      <div class="col-lg-4 col-md-6 new-our-services-cards-card">
+        <div class="new-our-services-cards-image-container">
+          <div class="new-our-services-cards-image"
+            style="background-image: url('assets/images/our-services-icon-img/cards/Rectangle 18 (3).webp');">
+            <div class="new-our-services-cards-overlay">
+              <p class="new-our-services-cards-overlay-text pt-2"><span class="regular-font">Cargo</span><br>Your raw
+                food
+                materials are precious cargo to us. We handle and transport them with the utmost care,
+                utilising industry-best practices and compliance standards. Trust us to safeguard the quality and
+                integrity of your goods throughout their journey.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Card 4 -->
+      <div class="col-lg-4 col-md-6 new-our-services-cards-card">
+        <div class="new-our-services-cards-image-container">
+          <div class="new-our-services-cards-image"
+            style="background-image: url('assets/images/our-services-icon-img/cards/Rectangle 18 (4).webp');">
+            <div class="new-our-services-cards-overlay">
+              <p class="new-our-services-cards-overlay-text pt-2"><span class="regular-font">Trucking</span><br>When it
+                comes to land transportation, our reliable fleet of trucks is at your service. Whether it's
+                short-haul or long-distance, our experienced drivers and well-maintained vehicles ensure the safe and
+                timely delivery of your raw food materials.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Card 5 -->
+      <div class="col-lg-4 col-md-6 new-our-services-cards-card">
+        <div class="new-our-services-cards-image-container">
+          <div class="new-our-services-cards-image"
+            style="background-image: url('assets/images/our-services-icon-img/cards/Rectangle 18 (5).webp');">
+            <div class="new-our-services-cards-overlay">
+              <p class="new-our-services-cards-overlay-text pt-2"><span class="regular-font">Products
+                  Safety</span><br>We
+                prioritise your safety above all else. Our unwavering commitment to rigorous quality
+                standards ensures that every product we trade is held to the highest safety measures, giving you
+                confidence and peace of mind in every transaction.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Card 6 -->
+      <div class="col-lg-4 col-md-6 new-our-services-cards-card">
+        <div class="new-our-services-cards-image-container">
+          <div class="new-our-services-cards-image"
+            style="background-image: url('assets/images/our-services-icon-img/cards/Rectangle 18 (6) (2).webp');">
+            <div class="new-our-services-cards-overlay">
+              <p class="new-our-services-cards-overlay-text pt-2"><span class="regular-font">Quality
+                  Assurance</span><br>We implement stringent quality control measures throughout the supply chain to
+                uphold the integrity of the products we trade. Our commitment to excellence is reflected in the
+                satisfaction of our clients who trust us for superior supplies.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
-  <!-- CLIENT'S SUCCESS STORIES - BOOTSTRAP -->
+  <!-- CLIENT'S SUCCESS STORIES - BOOTSTRAP (OLD) -->
 
-  <section class="client-success-stories">
+  <!-- <section class="client-success-stories">
     <div class="container">
       <div class="client-top-text">
         <h2>CLIENT'S SUCCESS STORIES</h2>
@@ -340,6 +436,94 @@
             aria-label="Slide 3"></button>
         </div>
       </div>
+    </div>
+  </section> -->
+
+  <!-- CLIENT'S SUCCESS STORIES (NEW) -->
+
+  <section class="client-success-stories">
+    <div class="container">
+      <div class="client-top-text">
+        <h2>CLIENT'S SUCCESS STORIES</h2>
+        <p class="regular-font">Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at.</p>
+      </div>
+
+      <div class="row">
+
+        <div class="col-md-5">
+          <div class="client-img">
+            <img src="assets/images/our-services-icon-img/client-success-stories/client-img-1.webp"
+              class="img-fluid pb-2 pb-md-5 new-client-img" alt="client image">
+          </div>
+        </div>
+
+
+        <div class="col-md-7">
+          <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000"
+            data-bs-pause="false">
+            <div class="carousel-inner">
+
+              <div class="carousel-item pt-2 active">
+                <div class="container">
+                  <div class="row align-items-center">
+                    <div class="client-success-stories-text">
+                      <h2 class="pt-5 px-md-5">Simran Kaur</h2>
+                      <p class="c-s-p-text px-md-5">HR & manager</p>
+                      <p class="regular-font px-md-5">Bhagirath BVM Grand (HK) exceeds expectations in trading goods.
+                        Their professionalism and dedication ensure seamless transactions and superior product quality.
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat, repellat.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="carousel-item pt-2">
+                <div class="container">
+                  <div class="row align-items-center">
+                    <div class="client-success-stories-text">
+                      <h2 class="pt-5 px-md-5">John Doe</h2>
+                      <p class="c-s-p-text px-md-5">HR & manager</p>
+                      <p class="regular-font px-md-5">Bhagirath BVM Grand (HK) exceeds expectations in trading goods.
+                        Their professionalism and dedication ensure seamless transactions and superior product quality.
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat, repellat.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="carousel-item pt-2">
+                <div class="container">
+                  <div class="row align-items-center">
+                    <div class="client-success-stories-text">
+                      <h2 class="pt-5 px-md-5">Donald Hill</h2>
+                      <p class="c-s-p-text px-md-5">HR & manager</p>
+                      <p class="regular-font px-md-5">Bhagirath BVM Grand (HK) exceeds expectations in trading goods.
+                        Their professionalism and dedication ensure seamless transactions and superior product quality.
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat, repellat.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+
+
+            </div>
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+
+
+
     </div>
   </section>
 
@@ -566,6 +750,59 @@
         }
       });
     });
+
+    // CLIENT'S SUCCESS STORIES IMAGE CHANGE
+
+    // ATTEMPT 1
+    // const images = [
+    //   'assets/images/our-services-icon-img/client-success-stories/client-img-1.webp',
+    //   'assets/images/our-services-icon-img/client-success-stories/client-img-2.webp',
+    //   'assets/images/our-services-icon-img/client-success-stories/client-img-3.webp'
+    // ];
+
+    // let currentImageIndex = 0;
+    // const imgElement = document.querySelector('.new-client-img');
+
+    // function changeImage() {
+    //   imgElement.classList.add('fade-out');
+
+    //   setTimeout(() => {
+    //     currentImageIndex = (currentImageIndex + 1) % images.length;
+    //     imgElement.src = images[currentImageIndex];
+    //     imgElement.classList.remove('fade-out');
+    //   }, 0);
+    // }
+    // setInterval(changeImage, 3000);
+
+    // ATTEMPT 2
+    // const images = [
+    //   'assets/images/our-services-icon-img/client-success-stories/client-img-1.webp',
+    //   'assets/images/our-services-icon-img/client-success-stories/client-img-2.webp',
+    //   'assets/images/our-services-icon-img/client-success-stories/client-img-3.webp'
+    // ];
+    // let currentImageIndex = 0;
+    // const imgElement = document.querySelector('.new-client-img');
+    // function changeImage() {
+    //   currentImageIndex = (currentImageIndex + 1) % images.length;
+    //   imgElement.src = images[currentImageIndex];
+    // }
+    // setInterval(changeImage, 3020);
+
+    // ATTEMPT 3
+    const images = [
+      'assets/images/our-services-icon-img/client-success-stories/client-img-1.webp',
+      'assets/images/our-services-icon-img/client-success-stories/client-img-2.webp',
+      'assets/images/our-services-icon-img/client-success-stories/client-img-3.webp'
+    ];
+    const carouselElement = document.getElementById('testimonialCarousel');
+    const imgElement = document.querySelector('.new-client-img');
+
+    carouselElement.addEventListener('slide.bs.carousel', function (event) {
+      const newIndex = event.to; // Get the index of the new slide
+      imgElement.src = images[newIndex]; // Update the image source
+    });
+
+
   </script>
 
 </body>
